--- a/src/layouts/Landing/Template/index.html
+++ b/src/layouts/Landing/Template/index.html
@@ -37,6 +37,8 @@
         </nav>
     </header>
 
+    
+
     <aside>
         <button>
             <img src="../../../../public/images/icons/Trash.svg" alt="">
@@ -45,43 +47,48 @@
         <ul>
             <li>
                 <input type="number" class="productCant">
-                <img src="../../../../public/images/Licores/ron-cacique.jpg">
+                <img class="productImage" src="../../../../public/images/Licores/ron-cacique.jpg">
                 <div>
                     <span>Ron Cacique</span>
                     <p>10.00$ (10.00$ c/u)</p>
                 </div>
+                <img src="../../../../public/images/icons/Trash.svg">
             </li>
             <li>
                 <input type="number" class="productCant">
-                <img src="../../../../public/images/Licores/ron-cacique.jpg">
+                <img class="productImage" src="../../../../public/images/Licores/ron-cacique.jpg">
                 <div>
                     <span>Ron Cacique</span>
                     <p>10.00$ (10.00$ c/u)</p>
                 </div>
+                <img src="../../../../public/images/icons/Trash.svg">
             </li>
             <li>
                 <input type="number" class="productCant">
-                <img src="../../../../public/images/Licores/ron-cacique.jpg">
+                <img class="productImage" src="../../../../public/images/Licores/ron-cacique.jpg">
                 <div>
                     <span>Ron Cacique</span>
                     <p>10.00$ (10.00$ c/u)</p>
                 </div>
+                <img src="../../../../public/images/icons/Trash.svg">
             </li>
             <li>
                 <input type="number" class="productCant">
-                <img src="../../../../public/images/Licores/ron-cacique.jpg">
+                <img class="productImage" src="../../../../public/images/Licores/ron-cacique.jpg">
                 <div>
                     <span>Ron Cacique</span>
                     <p>10.00$ (10.00$ c/u)</p>
                 </div>
+                <img src="../../../../public/images/icons/Trash.svg">
             </li>
             <li>
                 <input type="number" class="productCant">
-                <img src="../../../../public/images/Licores/ron-cacique.jpg">
+                <img class="productImage" src="../../../../public/images/Licores/ron-cacique.jpg">
                 <div>
-                    <span>Ron Cacique</span>
-                    <p>10.00$ (10.00$ c/u)</p>
+                    <span>Ron Caciqfhfghfghfghue</span>
+                    <p>10.00$ (10.00$ c/udfsdfsdfsdfsdfsd)</p>
                 </div>
+                <img src="../../../../public/images/icons/Trash.svg">
             </li>
         </ul>
         <section>
