--- a/src/layouts/Landing/Template/index.html
+++ b/src/layouts/Landing/Template/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Template</title>
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="../content.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -37,7 +37,11 @@
         </nav>
     </header>
 
-    
+    <img id="whatsappIcon" src="../../../../public/images/icons/whatsapp.svg">
+
+    <div id="values">
+        <section></section>
+    </div>
 
     <aside>
         <button>
