--- a/src/layouts/Landing/content.css
+++ b/src/layouts/Landing/content.css
@@ -15,6 +15,16 @@ body{
     box-sizing: border-box;
 }
 
+#whatsappIcon{
+    position: fixed;
+    width: 5.5vmin;
+    height: 5.5vmin;
+    cursor: pointer;
+    bottom: 8%;
+    right: 3%;
+    z-index: 10;
+}
+
 header{
     position: fixed;
     width: 100dvw;
@@ -250,6 +260,8 @@ aside ul li p{
 
 aside ul li img:not(.productImage){
     cursor: pointer;
+    width: 1.5vmax;
+    height: 1.5vmax;
 }
 
 aside section{
@@ -259,6 +271,7 @@ aside section{
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-around;
     padding-left: 1vmin;
     gap: 1vmin;
 }
