cash values icons added

--- a/src/layouts/Landing/Template/index.html
+++ b/src/layouts/Landing/Template/index.html
@@ -40,7 +40,8 @@
     <img id="whatsappIcon" src="../../../../public/images/icons/whatsapp.svg">
 
     <div id="values">
-        <section></section>
+        <section id="dolars"><span>$</span></section>
+        <section id="bs"><span>bs</span></section>
     </div>
 
     <aside>
