--- a/src/layouts/Landing/Template/index.html
+++ b/src/layouts/Landing/Template/index.html
@@ -142,6 +142,7 @@
     </footer>
 
     <script type="text/javascript">
+
         document.getElementById("cart").addEventListener("click",function(){
             cartMenu = document.querySelector("aside");
             if (cartMenu.style.right === '-31%'){
@@ -193,6 +194,23 @@
             });
         });
     });
+
+    document.addEventListener("DOMContentLoaded", function() {
+    let lastScroll = window.scrollY;
+
+    window.addEventListener("scroll", function() {
+        const currentScroll = window.scrollY;
+        if (currentScroll > lastScroll){
+            // scroll down
+            document.querySelector("header").style.top = '-20%';
+        } else if (currentScroll < lastScroll) {
+            // scroll up
+            document.querySelector("header").style.top = '0%';
+        }
+        // scroll update
+        lastScroll = currentScroll;
+    });
+});
 
     </script>
 </body>
