--- a/src/layouts/Landing/content.css
+++ b/src/layouts/Landing/content.css
@@ -57,6 +57,11 @@ body{
     bottom: 8%;
     right: 3%;
     z-index: 10;
+    transition: scale 0.3s linear;
+}
+
+#whatsappIcon:hover{
+    scale: 1.1;
 }
 
 header{
