--- a/src/routes/auth/login.ejs
+++ b/src/routes/auth/login.ejs
@@ -13,24 +13,24 @@
                 <img src="/images/Logo/Logo.png" alt="Logo">
                 <h2>Login</h2>
             </div>
-            <form class="Form__page" action="">
+            <form class="Form__page">
                 <div class="Input--container">
                     <label for="Email">Email</label>
                     <div class="Container">
-                        <input type="email"  placeholder="Ingrese su email" required id="Email">
+                        <input type="email" name="email" placeholder="Ingrese su email" required id="Email">
                         <img src="/images/icons/person.png" alt="Logo">
                     </div>
                 </div>
                 <div class="Input--container">
                     <label for="Contraseña">Contraseña</label>
                     <div class="Container">
-                        <input type="password"  placeholder="Ingrese su contraseña" required id="Contraseña">
+                        <input type="password" name="password" placeholder="Ingrese su contraseña" required id="Contraseña">
                         <img src="/images/icons/lock.png" alt="Logo">
                     </div>
                 </div>
                 <div class="Buttons">
-                    <a href="/dashboard" id="link"><input class="Submit--From" value="Ingresar"></a>
-                    <a href="/register"><input class="Submit--From" value="Crear Cuenta"></a>
+                    <a href="" id="link"><input type="submit" class="Submit--From" value="Ingresar"></a>
+                    <a href=""><input class="Submit--From" value="Crear Cuenta"></a>
                 </div>
             </form>
         </div>
