Se arregla la cagada que casi hacer cesar

--- a/src/layouts/Gerente/Envios/Mayorista/Mayorista.html
+++ b/src/layouts/Gerente/Envios/Mayorista/Mayorista.html
@@ -17,7 +17,7 @@
     <nav class="Navigator--bar">
         <ul class="Navigator--bar List">
             <a href="../Main/Main.html" class="Link">
-                <Li class="List--cont"><img alt="Proveedores" src="../../../../public/images/icons/Home.png" title="Home"></Li>
+                <Li class="List--cont"><img alt="Proveedores" src="../../../../../public/images/icons/Home.png" title="Home"></Li>
             </a>
             <a href="../../Inventario/Inventario.html" class="Link">
                 <Li class="List--cont"><img alt="Inventario" src="../../../../../public/images/icons/Inventario.png" title="Inventario"></Li>
