--- a/src/layouts/Gerente/Estadistica/Estadistica.html
+++ b/src/layouts/Gerente/Estadistica/Estadistica.html
@@ -122,21 +122,25 @@
                 </div>
             </article>
             <article class="Container--Ventas">
-                <div class="Ventas--dia">
-                    <span>Ventas del dia</span>
-                    <span>002</span>
+                <div class="Container--1">
+                    <div class="Ventas--dia">
+                        <span>Ventas del Dia</span>
+                        <span>002</span>
+                    </div>
+                    <div class="Ventas--mes">
+                        <span>Ventas del Mes</span>
+                        <span>002</span>
+                    </div>
                 </div>
-                <div class="Ventas--mes">
-                    <span>Ventas del mes</span>
-                    <span>002</span>
-                </div>
-                <div class="Ingresos">
-                    <span>Ingresos</span>
-                    <span>1.000.000</span>
-                </div>
-                <div class="Egresos">
-                    <span>Egresos</span>
-                    <span>1.000.000</span>
+                <div class="Container--2">
+                    <div class="Ingresos">
+                        <span>Ingresos</span>
+                        <span>1.000.000</span>
+                    </div>
+                    <div class="Egresos">
+                        <span>Egresos</span>
+                        <span>1.000.000</span>
+                    </div>
                 </div>
             </article>
         </section>
