--- a/src/layouts/Gerente/Main/estilo.css
+++ b/src/layouts/Gerente/Main/estilo.css
@@ -15,19 +15,19 @@ font-family: san-ferif y font-size: 14px ya que voy a utilizar em*/
 }
 main{
     position: absolute;
-    left: 210px;
-    top: 90px;
+    left: 150px;
+    top: 80px;
     border-radius: 15px;
     box-shadow: 0 0 3px #000;
-    width: 80%;
-    height: 500px;
+    width: 85%;
+    height: 480px;
     display: flex;
-    gap: 85px;
+    gap: 45px;
     padding: 15px;
 }
 main .Avisos--panel{
     width: 280px;
-    height: 465px;
+    height: 425px;
     border-radius: 15px;
     box-shadow: 0 0 5px #000;
     padding: 15px;
@@ -207,9 +207,9 @@ main .panel--Estadistica .Content--panel--Estadistica .Grafica--Estadistica{
 
 main .Panel--pedidos{
     position: relative;
-    top: 255px;
-    left: -738px;
-    width: 655px;
+    top: 245px;
+    left: -695px;
+    width: 675px;
     height: 210px;
     border-radius: 15px;
     padding: 5px;
@@ -217,12 +217,11 @@ main .Panel--pedidos{
     background-color: var(--SecondaryColor);
 }
 main .Panel--pedidos .Pedidos{
-    width: 620px;
     display: flex;
     flex-direction: column wrap;
     gap: 15px;
     padding: 10px;
-    margin: 0 15px;
+    margin: 0 10px;
 }
 main .Panel--pedidos .Pedidos h3{
     color: var(--PrimaryColor);
@@ -233,14 +232,12 @@ main .Panel--pedidos .Pedidos h3{
 main .Panel--pedidos .Container--pedidos{
     display: flex;
     flex-flow: column wrap;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
-    width: 750px;
+    width: 645px;
     gap: 10px;
-    padding: 15px;
-    position: relative;
-    left: -45px;
-    top: -20px;
+    
+    
 }
 main .Panel--pedidos .Container--pedidos .Container--1{
     width: 590px;
