Se agrega una animación a las views mayorista y minorista

--- a/src/layouts/Gerente/Envios/Mayorista/Mayorista.html
+++ b/src/layouts/Gerente/Envios/Mayorista/Mayorista.html
@@ -45,9 +45,9 @@
                 </label>
             </div>
             <div class="Minorista--Mayorista">
-                <a href="../Minorista/Minorista.html">Minorista</a>
+                <a href="../Minorista/Minorista.html" id="minorista">Minorista</a>
                 <div>
-                    <span>Mayorista</span>
+                    <span id="mayorista">Mayorista</span>
                 </div>
             </div>
         </div>
@@ -102,4 +102,5 @@
         </div>
     </main>
 </body>
+<script src="mayorista.js"></script>
 </html>
