--- a/src/layouts/Gerente/Envios/Minorista/Minorista.html
+++ b/src/layouts/Gerente/Envios/Minorista/Minorista.html
@@ -46,9 +46,9 @@
             </article>
             <article class="Minorista--Mayorista">
                 <div>
-                    <span href="#">Minorista</span>
+                    <span id="Minorista">Minorista</span>
                 </div>
-                <a href="../Mayorista/Mayorista.html">Mayorista</a>
+                <a href="../Mayorista/Mayorista.html" id="Mayorista">Mayorista</a>
             </article>
         </section>
         <section class="Table--Container">
@@ -102,4 +102,5 @@
         </section>
     </main>
 </body>
+<script src="minorista.js"></script>
 </html>
