--- a/src/layouts/Gerente/Avisos/Avisos.html
+++ b/src/layouts/Gerente/Avisos/Avisos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drinkers || Avisos</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="Avisos.css">
     <link rel="stylesheet" href="../header-sidebar/Estilo.css">
 </head>
 <body>
