--- a/src/layouts/Gerente/Envios/Minorista/Minorista.html
+++ b/src/layouts/Gerente/Envios/Minorista/Minorista.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drinkers || Envios</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="minorista.css">
     <link rel="stylesheet" href="../../header-sidebar/Estilo.css">
 </head>
 <body>
