--- a/src/layouts/Gerente/Main/Main.html
+++ b/src/layouts/Gerente/Main/Main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drinkers || Gerente</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="Main.css">
     <link rel="stylesheet" href="../../Gerente/header-sidebar/Estilo.css">
 </head>
 <body>
