--- a/src/layouts/Gerente/Proveedor/Proveedor.html
+++ b/src/layouts/Gerente/Proveedor/Proveedor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drinkers || Proveedor</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="Proveedor.css">
     <link rel="stylesheet" href="../header-sidebar/Estilo.css">
 </head>
 <body>
