Se comeinza la ventana modal de eliminar producto

--- a/src/layouts/Gerente/Inventario/Inventario.html
+++ b/src/layouts/Gerente/Inventario/Inventario.html
@@ -190,6 +190,9 @@
             <button type="submit" id="submit">Agregar</button>
         </form>
     </dialog>
+    <dialog id="Eliminar">
+        
+    </dialog>
 </body>
 <script src="Inventario.js"></script>
 </html>
