--- a/src/layouts/Gerente/Inventario/Inventario.css
+++ b/src/layouts/Gerente/Inventario/Inventario.css
@@ -141,9 +141,6 @@ dialog{
     border-radius: 10px;
     border: 1px solid #aaa;
     box-shadow: 0 0 5px #000;
-    display: flex;
-    justify-content: left;
-    flex-flow: column wrap;
 }
 dialog[open]{
     animation: openModal 0.5s forwards;
@@ -167,7 +164,7 @@ dialog h2{
     font-weight: 500;
 }
 dialog form{
-    padding: 20px;
+    padding: 5px;
     display: flex;
     flex-flow: column wrap;
 }
@@ -245,4 +242,41 @@ dialog form button:hover{
     outline: 2px solid #000;
     padding: 6px 10px;
 }
+.Eliminar--producto{
+    width: 450px;
+    height: 200px;
+}
+.Eliminar--producto form div{
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+}
+.Eliminar--producto form div label{
+    font-size: 1.3em;
+    letter-spacing: 1px;
+    font-weight: 600;
+}
+.Eliminar--producto form div input{
+    width: 300px;
+    padding: 5px 10px;
+    border: none;
+    border-bottom: 2px solid #aaa;
+    border-right: 2px solid #aaa;
+    border-radius: 15px;
+    outline: none;
+    font-size: 0.9em;
+}
+.Eliminar--producto form div input:hover{
+    border-bottom: 2px solid var(--SecondaryColor);
+    border-right: 2px solid var(--SecondaryColor);
+}
+.Eliminar--producto form div input::placeholder{
+    width: 300px;
+    color: var(--ColorNavigatorBar);
+}
+
+.Eliminar--producto form button{
+    width: 350px;
+}
+
 
