me llama el frontend cando quieras salimos , se agrega un input para agregar una imagen

--- a/src/layouts/Gerente/Inventario/Inventario.html
+++ b/src/layouts/Gerente/Inventario/Inventario.html
@@ -159,7 +159,10 @@
                 </div>
             </div>
             <div class="input--Container">
-                <label for="Imagen">Imagen del producto</label>
+                <div>
+                    <label for="Imagen">Imagen del producto</label>
+                    <input type="file" id="Imagen"/>
+                </div>
             </div>
             <div class="input--Container">
                 <div class="item">
@@ -230,7 +233,10 @@
                 </div>
             </div>
             <div class="input--Container">
-                <label for="Imagen">Imagen del producto</label>
+                <div>
+                    <label for="Imagen">Imagen del producto</label>
+                    <input type="file" id="Imagen"/>
+                </div>
             </div>
             <div class="input--Container">
                 <div class="item">
