--- a/src/routes/auth/login.ejs
+++ b/src/routes/auth/login.ejs
@@ -30,7 +30,7 @@
                 </div>
                 <div class="Buttons">
                     <a href="" id="link"><input type="submit" class="Submit--From" value="Ingresar"></a>
-                    <a href=""><input class="Submit--From" value="Crear Cuenta"></a>
+                    <a href="/register"><input class="Submit--From" value="Crear Cuenta"></a>
                 </div>
             </form>
         </div>
